[gd_scene load_steps=6 format=3 uid="uid://4egneeigstm6"]

[ext_resource type="Script" path="res://ui.gd" id="1_evcx0"]
[ext_resource type="FontFile" uid="uid://cgfpe8yk77myt" path="res://Fonts/chinese rocks rg.otf" id="1_txrkj"]

[sub_resource type="Animation" id="Animation_v7cwy"]
resource_name = "hit enter to start"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnterToStartLabel:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843), Color(0.91637, 0.691911, 1, 1), Color(1, 1, 1, 0.607843)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnterToStartLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(803, 932), Vector2(803, 897), Vector2(803, 932)]
}

[sub_resource type="Animation" id="Animation_lcoso"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnterToStartLabel:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnterToStartLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(803, 768)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sx5xr"]
_data = {
"RESET": SubResource("Animation_lcoso"),
"hit enter to start": SubResource("Animation_v7cwy")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_evcx0")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 129.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("1_txrkj")
theme_override_font_sizes/font_size = 50
text = "Score"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -78.5
offset_right = 157.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_txrkj")
theme_override_font_sizes/font_size = 64
text = "Wasd to move
dont get hit"
horizontal_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RetryButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -352.0
offset_right = 100.0
offset_bottom = -272.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_txrkj")
theme_override_font_sizes/font_size = 50
text = "lets go"

[node name="EnterToStartLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = 392.0
offset_right = 157.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.607843)
theme_override_fonts/font = ExtResource("1_txrkj")
theme_override_font_sizes/font_size = 40
text = "hit enter to start"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sx5xr")
}
autoplay = "hit enter to start"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
